# Schoolworks

./: .gitignore  README.md
Basis of Programming (2017)/: 期中小作业.c  期末大作业.c
Basis of Programming (2017)/指针 1/: 1.c  3.c  4.c
Basis of Programming (2017)/数组 1/: 1.c  2.c  3.c  4.c
Basis of Programming (2017)/数组 2/: 1.c  2.c  3.c  extra.c
Basis of Programming (2017)/结构体/: 2.c  3.c
Data Structure (2018-2019)/: 1-Joseph.c  3-huffman.py  4-CampusGuide.py  graph.py  huffman.py  kruskal.py  list.cpp  list.h  predefine.h
Data Structure (2018-2019)/2-ParkingLotSimulation/: main.cpp  stack.h  test.cpp
Data Structure (2018-2019)/Homework - Month1/: CMakeLists.txt  P17.2.11.cpp  P17.2.19.cpp  P18.2.22.cpp  P24.3.15.cpp  P26.3.30.cpp  linklist_utils.hpp  test_P17.2.11.cpp  test_P17.2.19.cpp  test_P18.2.22.cpp  test_P24.3.15.cpp
Data Structure (2018-2019)/Homework - Month2/: bintree.h  by_level_traverse.cpp  counting_leaves.cpp  swap_left_right.cpp  test.cpp  test_bintree.cpp  test_queue.cpp
Data Structure (2018-2019)/ParkingLotSimulation (Stack & Queue)/: queue.h
Object Oriented Programming (C++) (2018)/: Week10-1-Class-Inheritance-DateTime.cpp  Week11-1-Calculator.cpp  Week14-1-Word-Frequency-Analyzer.cpp  Week2-1-Max.cpp  Week2-2-Basics-of-Class.cpp  Week3-1-Class-Converting-Polar-and-Rectangular.cpp.cpp  Week3-2-Static-Class-Member-Cat.cpp.cpp  Week4-1-Class-Fraction.cpp  Week6-1-Class-Set-Template-New.cpp  Week7-1-Class-Matrix.cpp  brainfuck.cpp
Operating System (2019)/: my_chrdev.c  shell.c
Principle of Compiler (2019)/: 程序总体结构.xmind
(+79 files in other folders)
