cmake_minimum_required(VERSION 3.12)
project(Homework_Data_Structure)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(/usr/local/include/)

# add_executable(Homework_Data_Structure P17.2.11.cpp test_P17.2.11.cpp)
# add_executable(Homework_Data_Structure P17.2.19.cpp test_P17.2.19.cpp)
# add_executable(Homework_Data_Structure P18.2.22.cpp test_P18.2.22.cpp)
# add_executable(Homework_Data_Structure P24.3.15.cpp test_P24.3.15.cpp)
add_executable(Homework_Data_Structure P26.3.30.cpp)
add_executable(Homework_Data_Structure_single P26.3.30.cpp)
